[package]
name = "untrack-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkify = "0.10.0"
url = "2.5.2"

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false
